--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
