--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -7,9 +7,11 @@
   <ItemGroup>
     <Compile Remove="Migrations\20180602033214_Init.cs" />
     <Compile Remove="Migrations\20180602034256_Init.cs" />
+    <Compile Remove="Migrations\20180606170553_Second.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
   </ItemGroup>
 
